# GladeToCpp

./: .gitmodules  CMakeLists.txt  ExampleWindow.glade  GtkMap.cpp  MainWindow.h  Parse.cpp  README  README.md  main.cpp  ui_mainwindow.h
